<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".Product_part_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pproduct_part"/>

<CheckBox
    android:id="@+id/box1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/body"/>
    <CheckBox
        android:id="@+id/box2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handle"/>
    <CheckBox
        android:id="@+id/box3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zipper"/>
    <CheckBox
        android:id="@+id/box4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gazet"/>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/addparts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/add_your_part"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/submit"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>
    <EditText
        android:id="@+id/usertext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

</LinearLayout>
</LinearLayout>